Fix scroll on mobile venue

--- a/frontend/src/pages/LandingPage/LandingPage.module.scss
+++ b/frontend/src/pages/LandingPage/LandingPage.module.scss
@@ -34,7 +34,7 @@
   }
 }
 
-.locationsText {
+.locationText {
   opacity: 0;
 }
 
