--- a/frontend/src/pages/VenuePage/VenuePage.module.scss
+++ b/frontend/src/pages/VenuePage/VenuePage.module.scss
@@ -175,6 +175,7 @@
       .imageContainer {
         height: 70vw;
         margin-bottom: 20px;
+        justify-content: flex-start;
       }
     }
 
